2006-08-19  Stefan Jahn  <stefan@lkcc.org>

	* vrect.cpp, irect.cpp: Added delay, fall and rise times
	as properties.

2006-07-23  Stefan Jahn  <stefan@lkcc.org>

	* capacitor.cpp, inductor.cpp: Use initil condition only if
	it is really given in the netlist.

2006-07-19  Stefan Jahn  <stefan@lkcc.org>

	* inductor.cpp:  Added initial condition 'I' (current through
	inductor) for transient	analysis.

	* capacitor.cpp: Added initial condition 'V' (voltage across
	capacitor) for transient analysis.

2006-05-22  Stefan Jahn  <stefan@lkcc.org>

	* tline.cpp: Damping factor now in 1/m and not Neper anymore.

	* vac.cpp, iac.cpp: Normalization of 'Theta' property regarding
	frequency.

2006-05-14  Stefan Jahn  <stefan@lkcc.org>

	* spfile.cpp: Implemented 'shortall' and 'short'.  One including
	and the other excluding the reference node.

2006-05-11  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Give a warning for probably unphysical
	model parameter 'M'.

	* devices/bjt.cpp: Give a warning for probably unphysical
	model parameters 'Nf' and 'Nr'.

2006-05-01  Stefan Jahn  <stefan@lkcc.org>

	* devices/mosfet.cpp, devices/jfet.cpp, devices/diode.cpp,
	devices/bjt.cpp: Implemented restartDC() callback.

2006-04-27  Stefan Jahn  <stefan@lkcc.org>

	* spfile.cpp: Implemented new 'duringDC' property.  The
	component represents now either an open (default) or a short
	during a DC simulation.

2006-04-25  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Finished HB callbacks.

	* devices/bjt.cpp: New function loadOperatingPoints()
	implemented, thus difference between exact operating
	points and those used for next iteration possible.

2006-04-20  Stefan Jahn  <stefan@lkcc.org>

	* devices/bjt.cpp: Fixed a bug during transient analysis due
	to wrong Cbcx computation.

2006-04-06  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp (calcHB): Setup callbacks for the HB
	analysis.  First non-linear element to be implemented...
